# recipe_nutrition

./: .gitignore  README.md  ngrok.yml  package-lock.json  package.json
backend/: LINUX_DEPLOYMENT.md  README_energy_calculator.md  check_protein.py  clear_nutrition_data.py  config_linux.py  database_linux.py  debug_nutrients.py  fix_protein.py  main_linux.py  pyproject.toml  requirements.txt  run_energy_tests.py  start_linux.sh  test_db_connection.py
backend/app/: main.py
backend/app/api/: route.py
backend/app/api/routes/: health.py  pets.py  recipes.py
backend/app/core/: config.py  response.py
backend/app/db/: database.py  databaseManager.py  models.py  nutrientStandard.py
backend/app/schemas/: pet.py  recipe.py
backend/app/services/: energy_calculate.py  optimization_config_example.py  pet_service.py  recipe_service.py
backend/app/test/: db_test.py  test_energy_calculator.py
backend/data/: food_data.csv  food_selected.csv
backend/tests/: test_recipe_service.py
docs/: REFACTORING_PLAN.md
frontend/: .env.example
pet-nutrition-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
pet-nutrition-frontend/public/: test.html
pet-nutrition-frontend/src/: App.tsx  index.css  index.html  style.css  vite-env.d.ts
pet-nutrition-frontend/src/components/: Homepage.tsx  RecipeResult.tsx
pet-nutrition-frontend/src/components/forms/: PetForm.tsx
pet-nutrition-frontend/src/components/recipe/: NutritionCharts.tsx  ReportHeader.tsx
pet-nutrition-frontend/src/constants/: aafcoStandards.ts
pet-nutrition-frontend/src/hooks/: useRecipeData.ts
pet-nutrition-frontend/src/services/: api.ts
pet-nutrition-frontend/src/stores/: usePetStore.ts
pet-nutrition-frontend/src/types/: index.ts
(+2 files in other folders)
