[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-pet-nutrition-backend"
version = "1.0.0"
description = "AI-powered pet nutrition optimization backend"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Pet Nutrition Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pandas>=2.1.4",
    "numpy>=1.24.0",
    "httpx>=0.25.2",
    "requests>=2.31.0",
    "scipy>=1.11.4",
    "pulp>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.8.0",
    "colorlog>=6.7.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"] 